# feel-server

./: .env  Cargo.toml  Config.toml  README.md
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  utils.rs
crates/entity/src/article/: article.rs  mod.rs
crates/entity/src/club/: club.rs  mod.rs
crates/entity/src/commit/: commit.rs  mod.rs
crates/entity/src/follow/: mod.rs  user_follow.rs  user_follow_detail.rs
crates/entity/src/label/: lable.rs  mod.rs  user_lable.rs
crates/entity/src/permission/: mod.rs  permission.rs  role.rs  role_permission.rs  url_permission.rs  user_role.rs
crates/entity/src/setting/: mod.rs  setting.rs
crates/entity/src/trend/: mod.rs  trend.rs  trend_update.rs
crates/entity/src/user/: mod.rs  user_auth.rs  user_base.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_user_base.rs  m20240105_032645_create_user_auth.rs  m20240107_132002_create_setting.rs  m20240108_075749_create_label.rs  m20240108_080154_create_user_label.rs  m20240111_061707_create_commit.rs  m20240111_073155_create_trend.rs  m20240112_061921_create_article.rs  m20240113_072001_create_user_follow_detail.rs  m20240113_072006_create_user_follow.rs  m20240114_123041_create_user_trend_update.rs  m20240116_054141_create_permission.rs  m20240116_055748_create_role.rs  m20240116_060328_create_user_role.rs  m20240116_061300_create_role_permission.rs  m20240118_144159_create_url_permission.rs  m20240120_050858_create_club.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  traits.rs  utils.rs
crates/storage/src/article/: dto.rs  mod.rs
crates/storage/src/club/: dto.rs  mod.rs
crates/storage/src/commit/: dto.rs  mod.rs
crates/storage/src/follow/: dto.rs  mod.rs
crates/storage/src/label/: dto.rs  mod.rs
crates/storage/src/permission/: dto.rs  mod.rs
crates/storage/src/setting/: dto.rs  mod.rs
crates/storage/src/trend/: dto.rs  mod.rs
crates/storage/src/user/: dto.rs  mod.rs
src/: encryptor.rs  error.rs  lib.rs  server.rs  state.rs
src/config/: mod.rs
src/helper/: encrypt_helper.rs  jwt_helper.rs  mod.rs
src/services/: label_service.rs  mod.rs  permissions.rs  setting_service.rs  user_service.rs
src/state/: mod.rs  permissions.rs
src/web/: middleware.rs  mod.rs  response.rs  security.rs
src/web/apis/: label_api.rs  mod.rs  response.rs  user_api.rs
src/web/apis/user_api/: dto.rs  mod.rs
src/web/middleware/: auth.rs  mod.rs
