[package]
name = "feel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./crates/*"]

[dependencies]

rc-entity = { path = "./crates/entity" }

thiserror = { version = "1.0" }
tokio = { version = "1.35", features = ["full"] }

poem = { version = "1.3" }
poem-openapi = { version = "3.0.6", features = ["swagger-ui"] }

tracing-subscriber = { version = "0.3" }
