[package]
name = "feel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./crates/*"]

[features]
default = ["dev"]
dev = []

[dependencies]

rc-entity = { path = "./crates/entity" }
rc-storage = { path = "./crates/storage" }
migration = { path = "./crates/migration" }

thiserror = { version = "1.0" }
tokio = { version = "1.35", features = ["full"] }

poem = { version = "2.0" }
poem-openapi = { version = "4.0", features = ["swagger-ui"] }

tracing-subscriber = { version = "0.3" }
tracing = { version = "0.1", features = ["log"] }

figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = { version = "0.15" }

rand = { version = "0.8" }

serde = { version = "1.0" }
serde_json = { version = "1.0" }

sha2 = { version = "0.10" }

xid = { version = "1.0" }
