[package]
name = "rc-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc-entity = { path = "../entity" }
thiserror = { version = "1.0" }

chrono = { version = "0.4" }

serde = { version = "1.0" }
serde_json = { version = "1.0" }

tracing = { version = "0.1", features = ["log"] }
